[package]
name = "tracker_rp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew = { version = "0.21", features = ["csr"] }
gloo-storage = "0.3"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "Window"] }